@@ -5,6 +5,7 @@
 	- Proper support for multilingual releases
 	- Copy-add release feature
 	- Automatically fill out title & original title when adding a release
+	- Separated VN search filters from search box
 
 2.4 - 2009-06-07
 	- Release search + browser + filters
